Readme refinements, updates to swagger.yaml, added /status handler
